--- a/config.json
+++ b/config.json
@@ -2,12 +2,13 @@
     "wallet": {
         "addressKeyName": "bangsat-kau-wkwkwk",
         "addressRestoreMnemonic": "what-the-fuck",
-        "alloraHomeDir": "/root/.allorad",
+        "alloraHomeDir": "",
         "gas": "auto",
         "gasAdjustment": 1.5,
         "nodeRpc": "https://rpc.ankr.com/allora_testnet",
-        "maxRetries": 3,
-        "delay": 1,
+        "maxRetries": 7,
+        "retryDelay": 3,
+        "accountSequenceRetryDelay": 5,
         "submitTx": true
     },
         "worker": [
