--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # The symbol TOKEN is D or R
-# The MODEL load is for you build or like for this SVR
+# The MODEL load modify or default is SVR
 TOKEN=
 MODEL=
